[package]
name = "aoc-2020"
version = "0.1.0"
edition = "2024"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
cargo_common_metadata = "allow"

[dependencies]
anyhow = "1.0.101"
strum = { version = "0.28.0", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
